# ivaHandyExperiment

./: CMakeLists.txt  package.xml  package.xml~
aknet_experiment/: CMakeLists.txt~
aknet_experiment/launch/: arrangment.launch  contain.launch  cut.launch  grasp.launch  multi_grasp.launch~  pound.launch~  pound_test.launch~  wgrasp.launch
aknet_experiment/src/: arrangment.cpp  contain.cpp  cut.cpp  grasp.cpp  pound.cpp  wgrasp.cpp
closeloop_grasp/: CMakeLists.txt  CMakeLists.txt~
closeloop_grasp/launch/: real_task.launch
closeloop_grasp/src/: aruco.cpp  aruco_correction.cpp  aruco_grasp.cpp  real_task.cpp
gknet_experiment/: CMakeLists.txt  CMakeLists.txt~
gknet_experiment/launch/: bin_picking.launch  dynamic_grasp.launch  static_grasp.launch
gknet_experiment/src/: bin_picking.cpp  dynamic_grasp.cpp  static_grasp.cpp
manipulation/: CMakeLists.txt  CMakeLists.txt~
manipulation/launch/: bottle_cap.launch  calibration.launch  drawer.launch  manual_bottle_cap.launch  manual_drawer.launch  manual_pen.launch  manual_salt_bottle.launch  manual_towel.launch  place_pen.launch  pour_water.launch  pour_water.launch~  salt_bottle.launch  test_newarm.launch  towel.launch  water_bottle.launch
manipulation/src/: bottle_cap.cpp  calibration.cpp  drawer.cpp  manual_bottle_cap.cpp  manual_drawer.cpp  manual_pen.cpp  manual_salt_bottle.cpp  manual_towel.cpp  place_pen.cpp  pour_water.cpp  salt_bottle.cpp  test.cpp  test_newarm.cpp  towel.cpp  water_bottle.cpp
pickplace/launch/: pick.launch  pick.launch~  pickplace.launch~  place.launch~  real_image_collector.launch
(+4 files in other folders)
